<resources>
    <string name="app_name">나만의 재밌는 다이어트</string>
    <string name="kakao_app_key">44d8245876e303881266ed530a7464d6</string>
    <string name="kakao_scheme">kakao44d8245876e303881266ed530a7464d6</string>
    <string name="btn_next_description">다음</string>
    <string name="btn_start">설문을 시작합니다</string>
    <string name="btn_next_survey">다음으로</string>\
    <string name="rbtn_empty">라디오버튼</string>
    <string name="btn_prev_survey">이전으로</string>
    <string name="btn_complete_survey">설문 완료</string>

    <string name="txt_exit_title">설문 종료 확인</string>
    <string name="alert_survey_exit">설문이 완료되지 않았습니다. \n지금 종료하시면 설문내용이 저장되지 않습니다.\n종료하시겠습니까?</string>
    <string name="btn_dialog_yes">예</string>
    <string name="btn_dialog_no">아니오</string>
    <string name="btn_dialog_finish_confirm">확인</string>
    <string name="btn_dialog_agree_cancel">취소</string>
    <string name="btn_dialog_agree">설문 시작</string>

    <!--    Service Message-->
    <string name="msg_survey_absent">설문 내용이 없습니다</string>
    <string name="msg_survey_popup">설문 준비 중입니다</string>
    <string name="msg_survey_dday_alarm">설문 시작일 (23)일 되면 활성화됩니다</string>
    <string name="msg_survey_choiceyet">응답 후 넘어가실 수 있습니다</string>
    <string name="msg_survey_firstpage">설문 첫 페이지입니다.</string>
    <string name="msg_dialog_content_title">콘텐츠 리스트 로딩</string>
    <string name="msg_dialog_content_loading">콘텐츠 리스트를 불러오는 중입니다</string>

    <string name="msg_network_error">네트워크 문제로 설문 응답이 완료되지 못했습니다. 잠시 후 다시 시도해 주세요</string>

    <!--    UI Message-->
    <string name="msg_survey_purpose">&#160;&#160;본 설문은 여러가지 문항을 통해 사용자의 신체적 정신적인 건강유형을 파악하고, AI를 통해 사용자의 건강유형을 선별하여 적절한 서비스를 제공하기 위한 목적으로 진행됩니다. \n
    사용자의 개인정보는 분석을 위해서 개인의 동의하에 이용되며 3년 유지 후 추가의 개인정보 제공 동의가 없을경우 일괄 파기됩니다.</string>
    <string name="msg_survey_prepare">질문을 잘 읽고 해당하는 답변을 선택해 주세요</string>
    <string name="desc_default_image">기본 이미지</string>
    <string name="notify_input_age">나이를 입력하세요</string>
    <string name="notify_input_age_fault">설문 가능한 나이(14세 이상 80세 이하)가 아닙니다</string>
    <string name="notify_input_height">신장을 입력하세요</string>
    <string name="notify_input_height_fault">적절한 신장 수치를 입력하세요</string>
    <string name="notify_input_weight">체중을 입력하세요</string>
    <string name="notify_input_weight_fault">적절한 체중 수치를 입력하세요</string>
    <string name="notify_input_email">이메일을 입력하세요</string>
    <string name="notify_input_email_fault">적절한 이메일을 입력하세요</string>
    <string name="notify_input_cellphone">휴대폰 번호를 입력하세요</string>
    <string name="notify_input_cellphone_fault">적절한 휴대폰 번호를 입력하세요</string>
    <string name="notify_input_healtheval">건강 평가를 해주세요</string>
    <string name="notify_agree">개인 정보 수집 및 활용에 동의하지 않으면 설문을 진행하실 수 없습니다</string>
    <string name="notify_3agree">개인 정보 제3자 수집 및 이용 제공에 동의하지 않으면 설문을 진행하실 수 없습니다</string>
    <string name="txt_select_guide">선호하는 콘텐츠를 선택하고 별점을 주세요</string>
    <string name="msg_content_limit">최소 5개 이상의 콘텐츠를 선택하고 별점을 주세요</string>
    <string name="title_survey_finish">설문 응답 종료</string>
    <string name="msg_survey_finish">설문 참여가 종료되었습니다\n경품당첨 등 해당 사항은 참여자의 메일이나 연락처로 알려드리도록 하겠습니다\n참여해 주셔서 감사합니다</string>

    <!--    Hint-->
    <string name="hint">입력하세요</string>
    <string name="hint_email">email@mail.com</string>
    <string name="hint_cellphone">010-1234-5678</string>

    <string name="txt_bad">최악</string>
    <string name="txt_no_good">나쁨</string>
    <string name="txt_normal">보통</string>
    <string name="txt_good">좋음</string>
    <string name="txt_best">최상</string>


    <!--    Base information-->
    <string name="txt_base_category">기본 정보 및 건강 인식</string>
    <string name="txt_gender">성별</string>
    <string name="txt_birth">나이</string>
    <string name="txt_height">신장</string>
    <string name="txt_weight">체중</string>
    <string name="txt_health">평소 본인의 건강상태에 대한 평가는?</string>
    <string name="txt_email">이메일</string>
    <string name="txt_cellphone">휴대폰</string>
    <string name="txt_individual_use">개인 정보 수집 및 활용 동의</string>
    <string name="txt_individual_3use">개인 정보 제3자 수집 및 이용 제공 동의</string>
    <string name="txt_agree">동의합니다</string>
    <string name="txt_agree_mandatory">(필수) 동의합니다</string>
    <string name="txt_disagree">동의하지 않습니다</string>
    <string name="txt_individual_title">개인 정보 활용 동의</string>
    <string name="txt_individual_category">개인 정보 수집ㆍ이용 목적 및 수집 항목</string>
    <string name="txt_individual_category_detail">\n
        ① 수집·이용 목적 : 이벤트 선물발송\n
        ② 수집·이용 항목 : 이메일, 핸드폰번호\n
        ③ 수집·이용 기간 : 이벤트 종료 후 지체 없이 파기, 당첨자는 선물 발송을 위해 1년간 보관\n
        ④ 귀하는 개인정보 수집 동의에 거부하실 수 있으며, 동의 거부 시 이벤트 참여가 불가합니다.\n
        ⑤ 해당 이벤트는 만 14세 미만의 고객은 참여가 불가합니다.\n
        ⑥ 만 14세 미만의 고객님은 이벤트 참여 시 참여가 자동취소 되며, 추후 당첨자로 선정될 경우 별도 안내 없이 당첨이 자동 취소됩니다.\n
        ⑦ 약관 동의 내용에 대한 미확인으로 인한 불이익은 응모자 본인에게 책임이 있습니다.
    </string>
    <string name="txt_individual_3rd_detail">\n
        ① 개인정보 제공처 : KTMHOWS\n
        ② 개인정보 제3자 제공목적 : 이벤트 선물 발송\n
        ③ 제공하려는 개인정보의 항목 : 핸드폰번호\n
        ④ 개인정보의 보유 및 이용기간 : 이벤트 종료 후 지체 없이 파기, 당첨자는 선물 발송을 위해 1년간 보관\n
        ⑤ 귀하는 개인정보 제공 동의에 거부하실 수 있으며, 거부 시 이벤트 참여가 불가합니다.
    </string>
</resources>