<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/participant_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="30sp"
    tools:context=".ParticipantActivity">

    <TextView
        android:id="@+id/textView8"
        style="@style/SurveyCategory"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.45"
        android:text="@string/txt_base_category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/txt_gender" />

            <Spinner
                android:id="@+id/spnGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="#000000"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_birth" />

            <EditText
                android:id="@+id/eTxtAge"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_height" />

            <EditText
                android:id="@+id/eTxtHeight"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_weight" />

            <EditText
                android:id="@+id/eTxtWeight"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_health" />

            <RadioGroup
                android:id="@+id/rGrpHealthEvaluation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rBtnBad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:buttonTint="#000000"
                    android:text="@string/txt_bad"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rBtnNoGood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:buttonTint="#000000"
                    android:text="@string/txt_no_good"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rBtnNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:buttonTint="#000000"
                    android:text="@string/txt_normal"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rBtnGood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:buttonTint="#000000"
                    android:text="@string/txt_good"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/rBtnBest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:buttonTint="#000000"
                    android:text="@string/txt_best"
                    android:textColor="#000000" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/txt_email" />

            <EditText
                android:id="@+id/eTxtEmail"
                style="@style/TextParticipantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#8E8E8E" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                style="@style/TextParticipantInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_cellphone" />

            <EditText
                android:id="@+id/eTxtCellPhone"
                style="@style/TextParticipantInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_cellphone"
                android:inputType="phone"
                android:textColorHint="#8E8E8E" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.45"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMainSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_participant_next"
            android:enabled="true" />
    </LinearLayout>

</LinearLayout>