<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_default_image"
            android:src="@drawable/confirm" />

        <TextView
            android:id="@+id/tVwExitTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/txt_exit_title"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.3" />

    <LinearLayout
        style="@style/DialogExitMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_survey_exit"
            android:textSize="23sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExitYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_dialog_yes"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnExitNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_dialog_no"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>